Plugin api (#62)
Added plugins API coverage.
